<resources>
    <string name="app_name">MoniSport</string>
    <string name="btn_nueva_sesion">Crear nueva sesión</string>
    <string name="btn_listado_sesiones">Ver listado de sesiones</string>
    <string name="btn_grabar">Grabar</string>
    <string name="btn_buscar_bt">Buscar dispositivos</string>
    <string name="titulo_emparejados">Dispositivos vinculados</string>
    <string name="titulo_descubiertos">Dispositivos disponibles</string>
    <string name="none_paired">No hay dispositivos vinculados</string>
    <string name="scanning">buscando dispositivos...</string>
    <string name="select_device">selecciona un dispositivo para conectar</string>
    <string name="none_found">No se encuentran dispositivos</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">hPA\nmeter</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="titulo_listado">Selecciona una sesión para ver:</string>
    <string name="sincronizar">Sincronizado</string>
    <string name="desincronizar">Desincronizado</string>
    <string name="ir_camara">Empezar sesión</string>
    <string name="edad">Edad:</string>
    <string name="nombre">Nombre y Apellidos:</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_volver">Cancelar</string>
    <string name="msg_datos">Introduce los datos del deportista</string>
</resources>
