<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <TextView
        android:labelFor="@+id/nombre_intro"
        android:text="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:id="@+id/nombre_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:labelFor="@+id/edad_intro"
        android:text="@string/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:id="@+id/edad_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:labelFor="@+id/peso_intro"
        android:text="@string/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:id="@+id/peso_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:labelFor="@+id/altura_intro"
        android:text="@string/altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:id="@+id/altura_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inverso"
            android:text="@string/btn_guardar"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_inverso"
            android:text="@string/btn_volver"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>


</LinearLayout>