<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <Button
        android:id="@+id/button_ir_camara"
        android:text="Ir a la camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_device"
        android:textSize="20sp"
        android:id="@+id/texto_info"
        />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar_bt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:text="@string/titulo_emparejados"
        android:id="@+id/title_paired_devices"
        android:textSize="16sp"/>
    <ListView
        android:id="@+id/listViewPaired"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_descubiertos"
        android:background="@drawable/border_bottom"
        android:textSize="16sp"
        android:id="@+id/title_new_devices"
        />
    <ListView
        android:id="@+id/listViewDetected"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>